# Learn-rl

./: README.md  shared-local-instance.db
ai-endpoints/: agent.py  app.py  code_parser.py  pyproject.toml  requirements.txt
client/: .gitignore  eslint.config.mjs  next.config.js  next.config.mjs  package-lock.json  package.json
client/.next/: app-build-manifest.json  trace
client/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
client/.next/server/app/: page.js  page_client-reference-manifest.js
client/.next/server/src/: middleware.js
client/.next/server/vendor-chunks/: @clerk.js  @floating-ui.js  @hookform.js  @next.js  @radix-ui.js  @reduxjs.js  @swc.js  aria-hidden.js  class-variance-authority.js  clsx.js  cookie.js  dequal.js  dot-case.js  filepond-plugin-image-exif-orientation.js  filepond-plugin-image-preview.js  filepond.js  get-nonce.js  immer.js  lower-case.js  lucide-react.js  next.js  (+21 more)
client/src/: middleware.ts
client/src/app/: layout.tsx  page.tsx  providers.tsx
client/src/components/: AppSidebar.tsx  Header.tsx  Navbar.tsx  NonDashboardNavbar.tsx  SharedNoticationSettings .tsx  SignIn.tsx  SignUp.tsx
client/src/hooks/: useCarousel.ts
client/src/state/: api.ts
code-editor-client/code-editor/: package-lock.json  package.json
server/: package-lock.json  package.json
server/src/: index.ts
server/src/controllers/: courseController.ts  userClerkController.ts
server/src/routes/: courseRoutes.ts  userClerkRoutes.ts
(+321 files in other folders)
